@@ -7,7 +7,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.UUID;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -34,30 +34,22 @@ public class StatsService {
         return statsRepository.getStatsByChatIdAndYear(chatId, year);
     }
 
-    public void updateStats(Stat randomWinner) {
-        randomWinner.setScore(randomWinner.getScore() + 1);
-        randomWinner.setIsWinner(Boolean.TRUE);
-        statsRepository.save(randomWinner);
-    }
-
     public List<Stat> getAllStatsByChatIdAndYear(Long chatId, int year) {
         return statsRepository.findAllByChatIdAndYear(chatId, year);
     }
 
     public List<Stat> getAllStatsByChatId(Long chatId) {
-        return statsRepository.findAllByChatId(chatId).stream()
-                .collect(Collectors.groupingBy(Stat::getUserId))
-                .entrySet().stream()
-                .map(entry -> {
-                    Long userId = entry.getKey();
-                    UUID statsId = entry.getValue().getFirst().getStatsId();
-                    String firstName = entry.getValue().getFirst().getFirstName();
-                    Integer year = entry.getValue().getFirst().getYear();
-                    Boolean isWinner = entry.getValue().getFirst().getIsWinner();
-                    Long totalScore = entry.getValue().stream().mapToLong(Stat::getScore).sum();
-                    return new Stat(statsId, userId, chatId, firstName, year, totalScore, isWinner);
+        Map<Long, List<Stat>> groupedStats = statsRepository.findAllByChatId(chatId)
+                .stream()
+                .collect(Collectors.groupingBy(Stat::getUserId));
+
+        return groupedStats.values().stream()
+                .map(stats -> {
+                    Stat firstStat = stats.getFirst();
+                    Long totalScore = stats.stream().mapToLong(Stat::getScore).sum();
+                    return new Stat(firstStat.getStatsId(), firstStat.getUserId(), chatId, firstStat.getFirstName(), firstStat.getYear(), totalScore, firstStat.getIsWinner());
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public long getTotalScoreByChatIdAndUserId(Long chatId, Long userId) {
